# ft2-3d-matching

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/three-dimensional-matching/: SKILL.md
.pi/: demo-profile.md  settings.json
.pi/agents/: deal-matching-guide.md
fixtures/: sample_companies.csv
src/ft2_3d_matching/: __init__.py  airtable.py  cli.py  data.py  embeddings.py  evaluation.py  graph.py  io.py  metrics.py  models.py  review.py  scoring.py  settings.py  textify.py  vector_store.py
tests/: test_data_text_embeddings.py  test_scoring_airtable_metrics.py  test_vector_graph_cli.py
