[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft2-3d-matching"
version = "0.1.0"
description = "Pi-first 3D deal matching workshop with LangGraph, FastEmbed, Qdrant, and Airtable."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastembed>=0.4.0",
  "jinja2>=3.1.4",
  "langgraph>=0.2.0",
  "pandas>=2.2.0",
  "pyairtable>=3.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "qdrant-client>=1.10.0",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
pi-check = "ft2_3d_matching.cli:pi_check"
download-data = "ft2_3d_matching.cli:download_data"
verify-data = "ft2_3d_matching.cli:verify_data"
prepare-sample = "ft2_3d_matching.cli:prepare_sample"
inspect-record = "ft2_3d_matching.cli:inspect_record"
textify-record = "ft2_3d_matching.cli:textify_record"
vectorize-sample = "ft2_3d_matching.cli:vectorize_sample"
start-vector-store = "ft2_3d_matching.cli:start_vector_store"
index-records = "ft2_3d_matching.cli:index_records"
query-vector-store = "ft2_3d_matching.cli:query_vector_store"
compare-vectors = "ft2_3d_matching.cli:compare_vectors"
score-market-stage = "ft2_3d_matching.cli:score_market_stage"
rank-candidates = "ft2_3d_matching.cli:rank_candidates"
evaluate-leads = "ft2_3d_matching.cli:evaluate_leads"
setup-airtable = "ft2_3d_matching.cli:setup_airtable"
verify-airtable = "ft2_3d_matching.cli:verify_airtable"
sync-airtable = "ft2_3d_matching.cli:sync_airtable"
read-airtable-labels = "ft2_3d_matching.cli:read_airtable_labels"
compute-metrics = "ft2_3d_matching.cli:compute_metrics"
render-review-workspace = "ft2_3d_matching.cli:render_review_workspace"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ft2_3d_matching = ["templates/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
